# watermill.rs

./: CHANGELOG.md  Cargo.toml  README.MD  README.md
.github/workflows/: publish.yml
src/: argmin.rs  count.rs  covariance.rs  ewmean.rs  ewvariance.rs  fewmean.rs  iqr.rs  iter.rs  kurtosis.rs  lib.rs  max.rs  maximum.rs  mean.rs  min.rs  minimum.rs  moments.rs  ptp.rs  quantile.rs  rolling.rs  skew.rs  sorted_window.rs  stats.rs  sum.rs  traits.rs  variance.rs
