[package]
name = "online-statistics"
version = "0.1.0"
edition = "2021"
authors = ["Adil Zouitine <adilzouitinegm@gmail.com>"]
license = "MIT"
description = "Blazingly fast, generic, and serializable online statistics."
repository = "https://github.com/AdilZouitine/online-statistics.rs"
keywords = ["statistics", "stream"]

[dependencies]
num = "0.4.0"
ordered-float = "3.0.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
