[package]
name = "watermill"
version = "0.1.1"
edition = "2021"
authors = ["Adil Zouitine <adilzouitinegm@gmail.com>"]
license = "MIT"
description = "Blazingly fast, generic, and serializable online statistics."
repository = "https://github.com/online-ml/watermill.rs"
keywords = ["statistics", "stream"]
exclude = [".github", ".pre-commit-config.yaml"]
readme = "README.md"
[dependencies]
num = "0.4.0"
ordered-float = { version = "3.0", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
